--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -71,7 +71,7 @@ jobs:
     - name: Set up MSYS2
       uses: msys2/setup-msys2@v2
       with:
-        msystem: UCRT64
+        msystem: mingw64
         update: true
         install: >
           mingw-w64-x86_64-gcc-fortran
