--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -77,6 +77,7 @@ jobs:
         install: >
           mingw-w64-x86_64-gcc-fortran
           mingw-w64-x86_64-lapack 
+          mingw-w64-x86_64-fpm
 
     - name: Run tests without coverage
       if: ${{ matrix.os == 'windows-latest' }}
