--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -79,7 +79,7 @@ jobs:
           mingw-w64-x86_64-lapack 
           mingw-w64-x86_64-fpm
 
-    - name: Run tests without coverage
+    - name: Run tests without coverage on Windows
       if: ${{ matrix.os == 'windows-latest' }}
       shell: msys2 {0}
       run: |
