--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -75,6 +75,7 @@ jobs:
         msystem: mingw64
         update: true
         install: >
+          git
           mingw-w64-x86_64-gcc-fortran
           mingw-w64-x86_64-lapack 
           mingw-w64-x86_64-fpm
