--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -84,7 +84,7 @@ jobs:
       if: ${{ matrix.os == 'windows-latest' }}
       shell: msys2 {0}
       run: |
-        fpm test --profile release --flag "-g" --compiler ${{ env.FC }} --c-compiler gcc
+        fpm test --profile release --flag "-g" --c-compiler gcc
 
     - name: Run tests without coverage
       if: ${{ env.FC != 'gfortran' && matrix.os != 'windows-latest' }}
