--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,17 +27,12 @@ jobs:
         submodules: false
 
     - name: Setup Fortran Compiler
+      if: ${{ matrix.os != 'windows-latest' }}
       uses: fortran-lang/setup-fortran@v1
       id: setup-fortran
       with:
         compiler: ${{ matrix.toolchain.compiler }}
         version: ${{ matrix.toolchain.version }}    
-    # Install fpm for Windows
-    - name: Install fpm
-      if: ${{ matrix.os == 'windows-latest' }}
-      uses: fortran-lang/setup-fpm@v7
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Install Python
       uses: actions/setup-python@v1 # Use pip to install latest CMake, & FORD/Jin2For, etc.
@@ -59,14 +54,6 @@ jobs:
         sudo apt-get install libnlopt-dev libblas-dev liblapack-dev
         python -m pip install --upgrade pip
         pip install ford numpy matplotlib gcovr numpy scipy coverage
-
-    - name: Install conda
-      if: ${{ matrix.os == 'windows-latest' }}
-      uses: conda-incubator/setup-miniconda@v3
-      with:
-        miniconda-version: "latest"
-        autoactivate-base: true
-        activate-environment: ""
 
     - name: Set up MSYS2
       if: ${{ matrix.os == 'windows-latest' }}
