--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -11,7 +11,7 @@ requires = [
 
 [project]
 name = "yaeos"
-description = "Thermodynamic modelling with Equation of State"
+description = "Thermodynamic modelling with Equations of State"
 readme = "README.md"
 dependencies = ["IPython", "numpy", "scipy", "pandas", "intersect", "matplotlib"]
 version = "4.2.2"
