--- a/python/tox.ini
+++ b/python/tox.ini
@@ -7,6 +7,7 @@ envlist =
     py310,
     py311,
     py312,
+    py313,
     coverage,
 
 
@@ -20,6 +21,7 @@ python =
     3.12: py312
 
 [testenv]
+passenv = FPM_*
 deps =
     ipdb
     pytest
@@ -56,6 +58,7 @@ commands = pydocstyle yaeos --convention=numpy
 
 
 [testenv:docs]
+passenv = FPM_*
 description = "Invoke sphinx-build to build the HTML docs"
 whitelist_externals = make
 usedevelop = False
@@ -68,6 +71,7 @@ commands =
 
 
 [testenv:coverage]
+passenv = FPM_*
 usedevelop = False
 skip_install = True
 deps =
