--- a/fpm.toml
+++ b/fpm.toml
@@ -27,7 +27,7 @@ json-fortran = {git="https://github.com/jacobwilliams/json-fortran"}
 forsus = {git="https://github.com/ipqa-research/forsus"}
 fortime = { git = "https://github.com/gha3mi/fortime.git" }
 PowellOpt = { git = "https://github.com/jacobwilliams/PowellOpt/" }
-#minpack = {git = "https://github.com/fortran-lang/minpack" }
+minpack = {git = "https://github.com/fortran-lang/minpack" }
 finterp = { git = "https://github.com/jacobwilliams/finterp.git" }
 
 [dev-dependencies]
