--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -152,7 +152,7 @@ jobs:
           # CIBW_BUILD_VERBOSITY: 3
           CIBW_BUILD_FRONTEND: build
           # MACOSX_DEPLOYMENT_TARGET: "13.0"
-          CIBW_BEFORE_TEST: pip install pytest
+          CIBW_BEFORE_TEST: pip install pytest fpm
           CIBW_TEST_COMMAND: pytest {project}/python/tests --import-mode=importlib
 
       - uses: actions/upload-artifact@v4
