ifx does not have trampolines

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,7 @@ jobs:
         toolchain:
           - {compiler: gcc, version: 10}
           - {compiler: gcc, version: 14}
-          - {compiler: intel, version: '2024.2'}
+          # - {compiler: intel, version: '2024.2'}
           # - {compiler: intel, version: '2023.2'}
     steps:
     - name: Checkout code
